# rag-fastapi-llamaindex

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config-local.yaml  pyproject.toml  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
.github/worklfows/: cicd.yaml
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py  dependencies.py  error_handlers.py  health.py  lifespan.py  main.py  middlewares.py
app/api/v1/: router.py  schemas.py
app/api/v1/routes/: rag.py
app/core/: exceptions.py
app/core/config/: __init__.py  api.py  configuration.py  logging.py  rag.py
app/services/: __init__.py  rag_service.py
app/services/components/: __init__.py  embedding.py  llm.py  vector_store.py
app/utils/: logging.py
templates/: qa_template.jinja2
tests/: conftest.py
tests/services/components/: test_embedding.py  test_llm.py  test_vector_store.py
